--- a/Database/Redis/3.2_字符串类型.md
+++ b/Database/Redis/3.2_字符串类型.md
@@ -2,7 +2,7 @@
 
 ### 概念
 
-字符串类型:它能存储任何形式的字符串，包括二进制数据(图片)。一个字符串类型键允许存储的值的最大容量是512MB。`字符串类型是其他4种数据类型的基础，其他数据类型和字符串类型的差别从某种角度来说只是组织字符串的形式不同。`例如，列表类型是以列表的形式组织字符串，而集合类型是以集合的形式组织字符串.
+字符串类型:它能存储任何形式的字符串，包括二进制数据。一个字符串类型键允许存储的值的最大容量是512MB。`字符串类型是其他4种数据类型的基础`,例如，列表类型是以列表的形式组织字符串，而集合类型是以集合的形式组织字符串.
 
 ```shell
 # 赋值与取值(当键不存在时会返回空结果nil)
@@ -18,7 +18,7 @@ INCR num
 # 当要操作的键不存在时,默认键值为0，所以递增后是1
 INCR num1
 
-# 当键值不是整数时Redis会提示错误
+# 当键对应的值不是整数时,incr命令会有错误
 SET num2 aa
 INCR num2
 
@@ -54,18 +54,17 @@ MGET num num2
 MSET num1 value1 num2 value2
 ```
 
-#### Redis键名的命名规则
+## Redis键名的命名规则
 
->提示Redis对于键的命名并没有强制的要求，但比较好的实践是用“对象类型:对象ID:对象属性”来命名一个键，如user:1:friends来存储ID为1的用户的好友列表。对于对象属性是多个单词则推荐使用“.”分隔，一方面是沿用以前的习惯（Redis以前版本的键名不能包含空格等特殊字符），另一方面是在redis-cli中容易输入，无需使用双引号包裹。另外为了日后维护方便，键的命名一定要有意义，如u:1:f的可读性显然不如user:1:friends好（虽然采用较短的名称可以节省存储空间，但由于键值的长度往远远大于键名的长度，所以这部分的节省大部分情况下并不如可读性来得重要）。
+>Redis对于键(key)的命名没有强制的要求，比较好的实践是用“对象类型:对象ID:对象属性”来命名一个键，如user:1:friends来存储ID为1的user的好友列表。对于对象属性是多个单词则推荐使用“.”分隔,另外键的命名可读性要好.
 
 1. 文章访问量统计:可以为每篇文章用名为`post:文章ID:page.view`的键来记录文章的访问量，每次访问用INCR使键`post:文章ID:page.view`对应的值递增。
 
-2. 生成自增ID:怎么为每篇文章生成一个唯一ID呢？在关系数据库中我们通过设置字段属性为AUTO_INCREMENT来实现每增加一条记录自动为其生成一个唯一的递增ID，而Redis中可以通过另一种模式来实现：对于每一类对象使用名为对象类型(复数形式):count①的键（如users:count）来存储当前类型对象的数量，每增加一个新对象时都使用INCR命令递增该键的值。由于使用INCR命令建立的键的初始键值是1，所以可以很容易得知，INCR命令的返回值既是加入该对象后的当前类型的对象总数，又是该新增对象的ID。
-注意：这个键名只是参考命名，实际使用中可以使用任何容易理解的名称。
+2. 怎么为每篇文章生成一个唯一ID呢？对于每一类使用: `对象类型的复数形式:count`的键（如users:count）来存储当前类型对象的数量，每增加一个新对象时都使用INCR命令递增该键的值。由于使用INCR命令建立的键的初始键值是1，所以INCR命令的返回值既是加入该对象后的当前类型的对象总数，又是该新增对象的ID。`注意：这个键名只是参考命名，实际使用中可以使用任何容易理解的名称。`
 
-3. 存储文章数据:每个字符串类型键只能存储一个字符串，而一篇博客文章是由标题、正文、作者与发布时间等多个元素构成的。为了存储这些元素，我们需要使用序列化函数将它们转换成一个字符串
+3. 存储文章数据:每个字符串类型只能存储一个字符串，而一篇博客文章是由标题、正文、作者与发布时间等多个元素构成的。为了存储这些元素，我们需要使用序列化函数将它们转换成一个字符串.
 
-### 位操作
+## 位操作
 
 >一个字节由8位组成,`SET foo bar`，bar的3个字母对应的ASCII码分别为98、97和114，转换成二进制后分别为1100010、1100001和1110010.
 
