--- a/Database/Redis/3.4_列表类型.md
+++ b/Database/Redis/3.4_列表类型.md
@@ -1,41 +1,49 @@
-## 列表类型(list)
+# 列表类型(list)
 
-### 概念
+## 概念
 
-列表类型(内部使用双向链表（double linked list）实现): 存储一个有序的字符串列表.向列表两端添加元素的时间复杂度为0(1)，获取越接近两端的元素速度就越快.使用链表的代价是通过索引访问元素比较慢
+列表类型(内部使用双向链表（double linked list）实现): 存储一个`有序(不是大小有序,而是插入的顺序是有序的)的字符串列表`.向列表两端添加元素的时间复杂度为0(1)，获取越接近两端的元素速度就越快.使用链表的代价是通过索引访问元素比较慢
 
-### 使用场景
+## 使用场景
 
 1. 列表类型的特性能非常快速地完成关系数据库难以应付的场景：如社交网站的新鲜事，我们关心的只是最新的内容，使用列表类型存储，即使新鲜事的总数达到几千万个，获取其中最新的100条数据也是极快的(最新鲜的事总是在队列的两端)
-2. 同样因为在两端插入记录的时间复杂度是0(1)，列表类型也适合用来记录日志，可以保证加入新日志的速度不会受到已有日志数量的影响
+2. 在两端插入记录的时间复杂度是0(1)，列表类型也适合用来记录日志，可以保证加入新日志的速度不会受到已有日志数量的影响
 3. 借助列表类型，Redis还可以作为队列使用
-4. 与散列类型键最多能容纳的字段数量相同，一个列表类型键最多能容纳2^32-1个元素
+4. 与散列类型键最多能容纳的字段field数量相同，一个列表类型键最多能容纳2^32-1个元素
 
 ```shell
-# 向列表两端增加元素,LPUSH命令用来向列表左边增加元素，返回值表示增加元素后列表的长度
+# 向列表两端增加元素
+# LPUSH命令(Left Push)用来向列表左边增加元素，返回值表示增加元素后列表的长度
 LPUSH key value [value …]
 RPUSH key value [value …]
 
-# 从列表两端弹出元素,LPOP命令可以从列表左边弹出一个元素,LPOP命令执行两步操作：将列表左边的元素从列表中移除，返回被移除的元素值
+# 从列表两端弹出元素,
+# LPOP命令可以从列表左边弹出一个元素,LPOP命令执行两步操作：将列表左边的元素从列表中移除，返回被移除的元素值
 LPOP key
 RPOP key
 
-# 上面提到的4个命令可以使用列表类型来模拟栈和队列的操作：如果想把列表当做栈，
-则搭配使用LPUSH和LPOP或RPUSH和RPOP
+# 上面提到的4个命令可以使用列表类型来模拟栈和队列的操作：
+# 如果想当成队列，则搭配使用
+LPUSH和RPOP或RPUSH和LPOP
 
-# 如果想当成队列，则搭配使用LPUSH和RPOP或RPUSH和LPOP
+# 如果想把列表当做栈,则搭配使用
+LPUSH和LPOP或RPUSH和RPOP
 
-# 取列表中元素的个数,当键不存在时LLEN会返回0，LLEN的时间复杂度为0(1)，Redis会读取现成的值，而不需要像部分关系数据库（如使用InnoDB存储引擎的MySQL 表）那样需要遍历一遍数据表来统计条目数量
+# 取列表中元素的个数,
+当键不存在时LLEN会返回0，LLEN的时间复杂度为0(1)，Redis会读取现成的值，而不需要像部分关系数据库（如使用InnoDB存储引擎的MySQL表）那样需要遍历一遍数据表来统计条目数量
 LLEN key
 
-# 获得列表片段(包含两端的元素)，start是从Left开始
+# 获得列表片段(包含两端的元素)，start是从Left开始,最left的元素的索引为0.
 LRANGE key start stop
+# 1. start和end都是正数的情况下,start一定要比end小,如果start比stop大，则会返回空列表,
+# 如果stop大于实际的索引范围，则会返回到列表最右边的元素
 
-# LRANGE命令也支持负索引，表示从Right右边开始计算序数,"-1"表示最右边第一个元素，"-2"表示最右边第二个元素,但是start一定要比end大,
-# 如果start的索引位置比stop的索引位置靠后，则会返回空列表,如果stop大于实际的索引范围，则会返回到列表最右边的元素
+# LRANGE命令也支持负索引，表示从Right右边开始计算序数,"-1"表示最右边第一个元素，"-2"表示最右边第二个元素,
+# 2. 在start和end都是负数的情况下,start也是一定要比end下,如果start比stop大，则会返回空列表,
 LRANGE key -2 -1
 
 # 获取列表中的所有元素
+# 3. 如果start为0,end可以比start小.
 LRANGE numbers 0 -1
 
 # 删除列表中前count个值为value的元素,返回值是实际删除的元素个数
@@ -49,17 +57,16 @@ LREM key count value
 # 从右边开始删除前|-3|个值为"2"的元素
 LREM numbers -3 2
 
-# 获得/设置指定索引的元素值
-# 要将列表类型当作数组来用，LINDEX命令是必不可少的。LINDEX命令用来返回指定索引的元素，索引从0开始。如：
+# 要将列表类型当作数组来用。LINDEX命令用来返回指定索引的元素，索引从0开始。如：
 LINDEX key index
 
-# 如果index是负数则表示从右边开始计算的索引，最右边元素的索引是-1。例如：
+# 如果index是负数,则表示从右边开始，最右边元素的索引是-1。例如：
 LINDEX numbers -1
 
 # LSET将索引为index的元素赋值为value
 LSET key index value
 
-# 只保留start到end的片段，包含两端
+# 只保留start到end的片段，包含start和end,其他的都删除了
 LTRIM key start end
 
 # LTRIM命令常和LPUSH命令一起使用来限制列表中元素的数量，比如记录日志时我们希望只保留最近的100条日志，
@@ -68,13 +75,15 @@ LPUSH logs newLog
 LTRIM logs 0 99
 
 # 向列表中插入元素
-# LINSERT命令首先会在列表中从左到右查找值为pivot的元素，然后根据第二个参数是BEFORE还是AFTER来决定将value插入到该元素的前面还是后面,
-# 返回值是插入后列表的元素个数
+# LINSERT命令首先会在列表中从左到右查找值为pivot的元素，
+# 然后根据第二个参数是BEFORE还是AFTER来决定将value插入到该元素的前面还是后面,
+# 返回值是插入后列表的元素个数,before是越接近于最left,越先被pop出来.
 LINSERT key BEFORE|AFTER pivot value
 LINSERT numbers AFTER 7 3
 
 # 将元素从一个列表转到另一个列表R,
-# 先执行RPOP命令再执行LPUSH 命令。RPOPLPUSH命令会先从source列表类型键的右边弹出一个元素，
+# 先执行RPOP命令再执行LPUSH 命令。
+# RPOPLPUSH命令会先从source列表类型键的右边弹出一个元素，
 # 然后将其加入到destination列表类型键的左边，并返回这个元素的值，整个过程是原子的
 RPOPLPUSH source destination
 ```
