--- a/JAVA/EE/MyBatis/2.0_MyBatis基础.md
+++ b/JAVA/EE/MyBatis/2.0_MyBatis基础.md
@@ -1,14 +1,11 @@
-## 什么orm框架
+# 什么orm框架
 
-orm指对象关系映射(Object Relational Mapping)。Object指java对象，Relational指关系型数据中的表，而Mapping(映射)指的就是java对象与表的映射.
-
-对象的属性名与数据库表user的字段名是一一对应的。`不过即使名字不一样也没有关系`，因为ORM框架通常都会支持用户定义`映射文件(Mapping File)`来指定`对象中的属性`与`数据库表字段`的对应关系.
-有了这个映射关系，ORM框架就可以发挥它的威力，例如：
+对象的属性名与数据库表user的字段名是一一对应的。`不过即使名字不一样也没有关系`，因为ORM框架通常都会支持用户定义`映射`来指定`对象中的属性`与`数据库表字段`的对应关系.有了这个映射关系，ORM框架就可以发挥它的威力，例如：
 
 * 保存记录：直接保存java对象即可，ORM框架会自动将java对象每个属性的值保存到对应的数据库表对应的字段上。
 * 查询记录：ORM框架会将查询到的结果集(ResultSet)封装成对应的Java对象。
 
-### MyBatis与其他orm持久化框架的对比
+# MyBatis与其他orm持久化框架的对比
 
 ORM框架有很多，除了Mybatis，比较著名的还有Hibernate、Toplink等。通常我们把Mybatis称之为半自动的ORM框架，把Hibernate、TopLink等称之为全自动的ORM框架。
 
@@ -17,7 +14,7 @@ ORM框架有很多，除了Mybatis，比较著名的还有Hibernate、Toplink等
 - JDBC是SQL夹在Java代码中，耦合度高导致硬编码，维护不易且实际开发中SQL会经常变化
 
 1. 从代码简洁性上来说，肯定是全自动的ORM框架更好。
-2. 从效率来说：半自动的ORM框架比全自动的ORM框架要更好。举个例子，Hibernate查询一条记录时，会将表中的所有字段查询出来，封装到Java对象中。这是因为hibernate中sql是动态生成的，不知道开发人员想要查询哪几个字段，因此只能查出所有。而Mybatis这种半自动ORM框架需要自己写SQL，因此我们可以指定只查询哪几个数据库字段。
+2. 从效率来说：半自动的ORM框架比全自动的ORM框架要更好。
 3. 从灵活性上来说：肯定是Mybatis更灵活，还是因为Sql由开发人员自己控制。Hibernate也可以自己写SQL来指定需要查询的字段，但这样就破坏了Hibernate开发的简洁性。
 
 > 从上手难易程度来说：Hibernate比Mybatis更加复杂。因为全自动的orm框架比半自动的ORM框架抽象程度更高，理解起来也更为复杂。
@@ -25,11 +22,11 @@ ORM框架有很多，除了Mybatis，比较著名的还有Hibernate、Toplink等
     对于开发人员，核心SQL需要自己优化，所以需要SQL和java编码分开，用Java编写的专注于业务，sql语句专注于数据操作访问,
     目前，国内的大型互联网公司使用的基本上都是mybatis.
 
-### mybatis与mybatis-spring的关系
+# mybatis与mybatis-spring的关系
 
 我们可以单独使用mybatis，只有在和spring整合的时候，才需要使用mybatis-spring.
 mybatis在操作数据库时，需要依赖数据源(DataSource)，mybatis自带了几个数据源实现，我们也可以自己指定其他实现，如druid、c3p0，dbcp等。
 
-Spring ----> mybatis-spring ----> mybatis ----> datasource ----> 数据库
+![](mybatis-spring整合/mybatis-spring.png)
 
 datasource是数据库连接池，用于获取数据库连接Connection.
