--- a/Database/Redis/1.0_Redis准备.md
+++ b/Database/Redis/1.0_Redis准备.md
@@ -45,3 +45,8 @@ Redis虽然作为数据库开发的，但还有其他功能:
 Redis提供了一百多个命令，听起来很多，但是常用的却只有十几个，并且每个命令都很容易记忆
 
 Redis提供了几十种不同编程语言的客户端库，使得在程序中与Redis进行交互变得更容易。
+
+# 命令文档
+
+- [](http://doc.redisfans.com/index.html)
+- [](https://redis.io/commands)
