--- a/Database/Redis/3.2_字符串类型.md
+++ b/Database/Redis/3.2_字符串类型.md
@@ -13,6 +13,7 @@ GET key
 SET num 23
 TYPE num
 GET num
+# 当计数器
 INCR num
 
 # 当要操作的键不存在时,默认键值为0，所以递增后是1
@@ -49,9 +50,17 @@ STRLEN num
 set chinese 你好
 strlen chinese
 
-# 同时获得/设置多个键值
+# 同时获得/设置多个键值(批处理)
 MGET num num2
 MSET num1 value1 num2 value2
+
+GETRANGE key start end
+SET mykey "This is a string"
+getrange mykey 0 3
+getrange mykey -3 -1
+getrange mykey 0 -1
+
+SETRANGE key1 6 "Redis"
 ```
 
 ## Redis键名的命名规则
