--- a/Database/Redis/3.3_散列类型.md
+++ b/Database/Redis/3.3_散列类型.md
@@ -2,6 +2,10 @@
 
 ## 使用场景
 
+结构化存储
+
+![](pics/hash的应用场景.png)
+
 想取得文章的标题，必须把整个文章数据字符串取出来反序列化，而其中占用空间最大的文章內容部分却是不需要的，这样会在传输和处理时造成资源浪费!!
 不仅取数据时会有资源浪费，在修改数据时也会有这个问题，比如当你只想更改文章的标题时也不得不把整个文章数据字符串更新一遍。
 
@@ -33,11 +37,9 @@ price
 
 # 赋值
 HSET key field value [field value …]
-HMSET key field value [field value …]
 
 # 取值
 HGET key field [field …]
-HMGET key field [field …]
 
 # 得到某一个键对应的所有的字段和值,将HGETALL的返回结果封装成编程语言中的对象，处理起来就非常方便了
 HGETALL key
