--- a/Database/Redis/4.2_生存时间.md
+++ b/Database/Redis/4.2_生存时间.md
@@ -1,6 +1,6 @@
-## 生存时间
+# 生存时间
 
-### 使用场景
+# 使用场景
 
 在实际的开发中经常会遇到一些有时效的数据，比如限时优惠活动、缓存或验证码等，过了一定的时间就需要删除这些数据。在关系数据库中一般需要额外的一个字段记录到期时间，然后定期检测删除过期数据。而在Redis中可以使用EXPIRE命令设置一个键的生存时间，到时间后Redis会自动删除它。
 
@@ -15,45 +15,36 @@ SET session:29e3d uid1314
 # EXPIRE命令返回1表示设置成功，返回0则表示键不存在或设置失败
 EXPIRE session:29e3d 900
 
-DEL session:29e3d
-
-EXPIRE session:29e3d 900
+# 也可以创建key 的时候设置
+set session:29e3d uid1314 EX 900
 
 # 要知道一个键还有多久的时间会被删除，可以使用TTL命令。返回值是键的剩余时间（单位是秒）
-SET foo bar
-
-EXPIRE foo 20
+TTL session:29e3d
 
 # 可见随着时间的不同，foo键的生存时间逐渐减少，20秒后foo键会被删除。当键不存在时TTL命令会返回-1
-TTL foo
-TTL foo
+TTL session:29e3d
 
 # 另外同样会返回-1的情况是没有为键设置生存时间（即永久存在，这是建立一个键后的默认情况）
-SET persistKey value
-TTL persistKey
 
 # 取消键的生存时间设置（即将键恢复成永久的），可以使用PERSIST命令。
 # 如果生存时间被成功清除则返回1；否则返回0（因为键不存在或键本来就是永久的）
-SET foo bar
-EXPIRE foo 20
 PERSIST foo
-TTL foo
 
-# 除了PERSIST命令之外，使用SET或GET命令为键赋值也会同时清除键的生存时间
-EXPIRE foo 20
+# 除了PERSIST命令之外，使用SET命令为键赋值也会同时清除键的生存时间
 SET foo bar
-TTL foo
 
 # 使用EXPIRE命令会重新设置键的生存时间
 SET foo bar
 EXPIRE foo 20
 TTL foo
+
 EXPIRE foo 20
 TTL foo
 
 # EXPIRE命令的seconds参数必须是整数，所以最小单位是1秒。
 # 如果想要更精确的控制键的生存时间应该使用PEXPIRE命令，PEXPIRE命令与EXPIRE的唯一区别是前者的时间单位是毫秒，
-# 即PEXPIRE key 1000与EXPIRE key 1等价。对应地可以用PTTL命令以毫秒为单位返回键的剩余时间
+
+# PTTL命令以毫秒为单位返回键的剩余时间
 
 # 两个相对不太常用的命令：EXPIREAT 和PEXPIREAT
 # EXPIREAT命令与EXPIRE命令的差别在于前者使用Unix时间作为第二个参数表示键的生存时间的截止时间
@@ -130,14 +121,30 @@ maxmemory-policy支持的规则如下所示。其中的LRU（Least Recently Used
     </tr>
     <tr>
        <td>noeviction</td>
-       <td>不删除键，只返回错误</td>
+       <td>不删除键，只返回错误,在内存满的时候,不能淘汰数据,只返回错误,这个时候需要我们扩容或者删除数据</td>
     </tr>
 </tbody>
 </table>
 
+>是两两组合
+
+volatile(易变的)指的是从已经设置过期时间的key里面挑选 最近最少使用(lru)的数据进行淘汰.
+
+ttl: 指的是快要过期的数据进行淘汰
+
+random: 任意选取数据(随机算法).
+
+allkeys: 所有的key, allkeys-lru:所有的key根据lru算法进行淘汰.
+
+![](pics/redis数据淘汰算法.png)
+
 >如当maxmemory-policy设置为allkeys-lru时，一旦Redis占用的内存超过了限制值，Redis会不断地删除数据库中最近最少使用的键① ，直到占用的内存小于限制值。
 
     注释：①事实上Redis并不会准确地将整个数据库中最久未被使用的键删除，而是每次从数据库中随机取3个键并删除这3个键中最久未被使用的键。删除生存时间最接近的键的实现方法也是这样。“3”这个数字可以通过Redis的配置文件中的maxmemory-samples参数设置
+
+![](pics/怎么控制redis的内存使用)
+
+db就是类似于关系型数据的里面的一个数据,一个redis实例是从0-15号,一共16个db.
 
 ## 实现Redis分布式锁
 
