--- a/Database/Redis/4.4_消息通知.md
+++ b/Database/Redis/4.4_消息通知.md
@@ -102,28 +102,38 @@ execute( task[1])
 无论queue:notification.email还有多少任务，消费者都会优先完成发送确认邮件的任务。
 ```
 
-###“发布/订阅”模式
+# “发布/订阅”模式(Pub/Sub)
 
-除了实现任务队列外，Redis还提供了一组命令可以让开发者实现“发布/订阅”（publish/subscribe）模式。“发布/订阅”模式同样可以实现进程间的消息传递，其原理是这样的：
+在pub/sub模式里面存在发布者和订阅者两种角色,发布者向特定的频道发送消息,而不用管有哪些订阅者订阅了这个频道,不用管订阅者订阅这个频道干什么.订阅者只管订阅频道,不用管这个频道中的消息是谁发送的.通过这种模式可以将这两个模块完全解耦开来,不仅在代码上可以解耦,而且也可以在物理部署上完全解耦.这样可以给我们的系统带来很大的灵活性.
 
-当有新消息通过 PUBLISH 命令发送给频道 channel1 时， 这个消息就会被发送给订阅这个频道channel1的三个客户端，
-“发布/订阅”模式中包含两种角色，分别是发布者和订阅者。订阅者可以订阅一个或若干个频道（channel），而发布者可以向指定的频道发送消息，所有订阅此频道的订阅者都会收到此消息。 
+# Redis的Pub/Sub实现
+
+Redis提供了一组命令可以让开发者实现“发布/订阅”（publish/subscribe）模式。“发布/订阅”模式同样可以实现进程间的消息传递.
+
+订阅者可以订阅一个或若干个频道（channel），而发布者可以向指定的频道发送消息，所有订阅此频道的订阅者都会收到此消息。 
+
+>每个channel中维护着订阅这个channel的client的集合(不重复),key表示channel的名字,所以发布订阅的数据结构就是集合(字典结构/hash,value为NULL)
+
+![](pics/发布-订阅-pubsub_channels字典示例.png)
 
 ```shell
-# 发布者发布消息的命令是PUBLISH，用法是PUBLISH channel message，如向channel.1说一声“hi”,这样消息就发出去了:
+# 发布消息的命令是PUBLISH，用法是PUBLISH channel名字 message，如向channel.1说一声“hi”,这样消息就发出去了:
 PUBLISH channel.1 hi
+
 # PUBLISH命令的返回值表示接收到这条消息的订阅者数量。因为此时没有客户端订阅channel.1，所以返回0。
+
 # 发出去的消息不会被持久化，也就是说当有客户端订阅channel.1后只能收到后续发布到该频道的消息，之前发送的就收不到了。
 
 # 订阅频道的命令是SUBSCRIBE，可以同时订阅多个频道，用法是SUBSCRIBE channel [channel …]。
+
 # 现在新开一个redis-cli实例A，用它来订阅channel.1：
 SUBSCRIBE channel.1
 # 执行SUBSCRIBE命令后客户端会进入订阅状态，处于此状态下客户端不能使用
-# 除SUBSCRIBE/UNSUBSCRIBE/PSUBSCRIBE/PUNSUBSCRIBE这4个属于“发布/订阅”模式的命令之外的命令，否则会报错。
 ```
 
 进入订阅状态后客户端可能收到三种类型的回复。每种类型的回复都包含3个值，第一个值是消息的类型，
 根据消息类型的不同，第二、三个值的含义也不同。消息类型可能的取值有：
+
 1. Subscribe。表示订阅成功的反馈信息。第二个值是订阅成功的频道名称，第三个值是当前客户端订阅的频道数量。
 2. message。这个类型的回复是我们最关心的，它表示接收到的消息。第二个值表示产生消息的频道名称，第三个值是消息的内容。
 3. unsubscribe。表示成功取消订阅某个频道。第二个值是对应的频道名称，第三个值是当前客户端订阅的频道数量，当此值为0时客户端会退出订阅状态，之后就可以执行其他非“发布/订阅”模式的命令了。
@@ -131,9 +141,11 @@ SUBSCRIBE channel.1
 >使用UNSUBSCRIBE命令可以取消订阅指定的频道，用法为UNSUBSCRIBE [channel [channel …]]，如果不指定频道则会取消订阅所有频道① .
 注释：①由于redis-cli的限制我们无法在其中测试UNSUBSCRIBE命令。
 
-#### 按照规则订阅
+#### 按照模式(Pattern)订阅
 
-除了可以使用SUBSCRIBE命令订阅指定名称的频道外，还可以使用PSUBSCRIBE命令订阅指定的规则。规则支持glob风格通配符格式:
+除了可以使用SUBSCRIBE命令订阅指定名称的频道外，还可以使用PSUBSCRIBE(Pattern Subscribe)命令指定的模式(规则)。
+
+![](pics/按模式订阅.png)
 
 ```shell
 # 规则channel.?*可以匹配channel.1和channel.10，但不会匹配channel.
@@ -152,5 +164,17 @@ PUBLISH channel.1 hi!
 >提示:使用PSUBSCRIBE命令可以重复订阅一个频道，如某客户端执行了PSUBSCRIBE channel.? channel.?*，`这时向channel.2发布消息后该客户端会收到两条消息，而同时PUBLISH命令返回的值也是2而不是1`。同样的，如果有另一个客户端执行了SUBSCRIBE channel.10，和PSUBSCRIBE channel.?*的话，向channel.10发送命令该客户端也会收到两条消息（但是是两种类型，message 和pmessage），同时PUBLISH命令会返回2。
 
 >PUNSUBSCRIBE命令可以退订指定的规则，用法是PUNSUBSCRIBE [pattern[pattern …]]，如果没有参数则会退订所有规则。
-
+ 
     注意 使用PUNSUBSCRIBE命令只能退订通过PSUBSCRIBE命令订阅的规则，不会影响直接通过SUBSCRIBE命令订阅的频道；同样UNSUBSCRIBE命令也不会影响通过PSUBSCRIBE命令订阅的规则。另外容易出错的一点是使用PUNSUBSCRIBE命令退订某个规则时不会将其中的通配符展开，而是进行严格的字符串匹配，所以PUNSUBSCRIBE *无法退订channel.*规则，而是必须使用PUNSUBSCRIBE channel.*才能退订。
+
+# 查询订阅状态 - PUBSUB
+
+- PUBSUB CHANNELS [pattern] (返回符合模式(未指定情况下返回所有)的频道)    
+- PUBSUB NUMSUB [channel1 ... channelN] (返回指定的频道的订阅数)
+- PUBSUB NUMPAT [返回服务器中被订阅的模式数目]  
+
+# Redis Pub/Sub应用场景示例 - 服务器集群监控管理
+
+我需要知道当前所有应用服务器的运行状态,是不是有哪些服务器已经挂了,是不是都在正常提供服务,或者一台服务器上有多个app,需要知道每个app占用的内存,cpu使用率等信息,再进一步可以给服务器发送管理的命令,比如我想重启等,这些都可以通过redis的pub/sub实现.
+
+![](pics/服务器集群监控管理.png)
