--- a/Database/Redis/6.1_持久化.md
+++ b/Database/Redis/6.1_持久化.md
@@ -1,12 +1,13 @@
-## Redis 持久化
+# Redis 持久化
 
-### Redis持久化概念
+将数据从内存中同步到硬盘，这就是持久化。
 
->Redis的强劲性能很大程度上是由于其将所有数据都存储在了内存中，为了使Redis在重启之后仍能保证在内存中的数据不丢失，需要将数据从内存中以某种形式同步到硬盘中，这一过程就是持久化。
+## Redis持久化方式
 
-### Redis持久化方式
+Redis支持两种方式的持久化，可以单独使用其中一种或将二者结合使用。
 
->Redis支持两种方式的持久化，一种是RDB方式，一种是AOF方式。可以单独使用其中一种或将二者结合使用。
+- RDB 快照模式，该模式用于生成某个时间点的备份信息，并且会对当前的key value进行编码存储到rdb文件中
+- AOF 持久化模式，会记录服务器所有的写请求，在服务重启的时候通过回放执行命令请求来恢复原有的数据,AOF文件记录的是原始的Redis写请求命令
 
 1. `RDB持久化`可以在`指定的时间间隔`内生成数据集的时间点快照（point-in-time snapshot）
 2. `AOF持久化记录服务器执行的所有写操作命令`，并`在服务器启动时，通过重新执行这些命令来还原数据集`。AOF文件中的命令全部以 Redis协议的格式来保存，新命令会被追加到文件的末尾。 Redis 还可以在后台对 AOF 文件进行重写（rewrite），使得 AOF 文件的体积不会超出保存数据集状态所需的实际大小.
