--- a/Database/Redis/6.2_主从复制.md
+++ b/Database/Redis/6.2_主从复制.md
@@ -12,7 +12,7 @@
 
 同步后的数据库分为两类，一类是主数据库（master），一类是从数据库（slave）。主数据库可以进行读写操作，`当发生写操作时自动将数据同步给从数据库。而从数据库一般是只读的，并接受主数据库同步过来的数据`。一个主数据库可以拥有多个从数据库，而一个从数据库只能拥有一个主数据库:
 
-![](master-slave-01.png)
+![](pics/master-slave-01.png)
 
     在Redis中使用复制功能非常容易，只需要`在从数据库的配置文件中加入“slaveof <masterip> <masterport>”`即可，
     主数据库无需进行任何配置。
@@ -107,7 +107,7 @@ hi
 
 `从数据库`不仅可以接收主数据库的同步数据，自己也可以同时作为主数据库存在，形成类似图的结构，如图7-2所示，数据库A的数据会同步到B和C中，而B中的数据会同步到D和E中。向B中写入数据不会同步到A或C中，只会同步到D和E中:
 
-![](master-slave-02.png)
+![](pics/master-slave-02.png)
 
 ### 读写分离的使用场景
 
