--- a/Database/Redis/3.5_集合类型.md
+++ b/Database/Redis/3.5_集合类型.md
@@ -2,7 +2,11 @@
 
 ## 概念和特点
 
-集合中的每个元素都是不同的，且没有顺序。一个集合类型（set）键可以存储至多2^32-1个字符串。
+集合是使用hash来实现的,只不过value为NULL.
+
+集合中的元素不重复，且没有顺序。一个集合类型（set）键可以存储至多2^32-1个字符串。
+
+如果set中的元素都是整数的话,redis会以intset的形式存储,intset是一个有序的整型数组,为了节省内存.
 
 常用操作是加入或删除元素、判断某个元素是否存在等，由于集合类型在Redis内部是使用值为空的散列表（hash table）实现的，所以这些操作的时间复杂度都是0(1)
 
@@ -63,8 +67,15 @@ SRANDMEMBER key [count]
 SPOP key
 ```
 
+# 应用场景
+
+- 去重(通过sadd全部添加,然后再获取)
+- 求交集,并集,差集
+
+兴趣组A代表篮球,兴趣组B代表足球,里面存储用户id,可以用sinter可以得出即喜欢篮球,又喜欢足球的用户,也可以求并集,再归类一个大点的体育,喜欢篮球和喜欢足球都是体育类的,用sunion获取出来.只喜欢足球活着只喜欢篮球的用户,是没有共同兴趣爱好的,这个就是差集sdiff.
+
 # 为什么元素所在的桶中的元素数量越少，其被随机选中的可能性就越大?
 
->集合类型采用（散列表）的存储结构。散列表使用散列函数将元素映射到不同的存储位置（桶）上以实现0(1)时间复杂度的元素查找，举个例子，当使用散列表存储元素b时，使用散列函数计算出b的散列值是0，所以将b存入编号为0 的桶（bucket）中，下次要查找b时就可以用同样的散列函数再次计算b的散列值并直接到相应的桶中找到b。当两个不同的元素的散列值相同时会出现冲突，Redis使用拉链法来解决冲突，即将散列值冲突的元素以链表的形式存入同一桶中，查找元素时先找到元素对应的桶，然后再从桶中的链表中找到对应的元素。使用SRANDMEMBER命令从集合中获得一个随机元素时，Redis首先会从所有桶中随机选择一个桶，然后再从桶中的所有元素中随机选择一个元素，所以元素所在的桶中的元素数量越少，其被随机选中的可能性就越大,因为每个非空的桶被选中的几率是相同的.
+>集合类型采用hash的存储结构。散列表使用散列函数将元素映射到不同的存储位置（桶）上以实现0(1)时间复杂度的元素查找，举个例子，当使用散列表存储元素b时，使用散列函数计算出b的散列值是0，所以将b存入编号为0 的桶（bucket）中，下次要查找b时就可以用同样的散列函数再次计算b的散列值并直接到相应的桶中找到b。当两个不同的元素的散列值相同时会出现冲突，Redis使用拉链法来解决冲突，即将散列值冲突的元素以链表的形式存入同一桶中，查找元素时先找到元素对应的桶，然后再从桶中的链表中找到对应的元素。使用SRANDMEMBER命令从集合中获得一个随机元素时，Redis首先会从所有桶中随机选择一个桶，然后再从桶中的所有元素中随机选择一个元素，所以元素所在的桶中的元素数量越少，其被随机选中的可能性就越大,因为每个非空的桶被选中的几率是相同的.
 
-Redis会先从3个桶中随机挑一个非空的桶，然后再从桶中随机选择一个元素，所以选中元素b的概率会大一些，如图:![bucket](./redis-set-bucket.png)
+Redis会先从3个桶中随机挑一个非空的桶，然后再从桶中随机选择一个元素，所以选中元素b的概率会大一些，如图:![bucket](pics/redis-set-bucket.png)
