--- a/Database/Redis/1.0_Redis准备.md
+++ b/Database/Redis/1.0_Redis准备.md
@@ -1,8 +1,10 @@
 # Redis介绍(使用C语言开发)
 
+作为一个缓存服务器或者是数据存储服务器.
+
 ## 键值数据类型
 
-Redis是一种NoSQL(Not Only SQL)，Redis是REmote DIctionary Server(远程字典服务器）的缩写，是一个用C 语言开发的一个开源的高性能键值对（key-value）数据库，并允许其他应用通过`TCP协议读写字典中的内容`。
+Redis是一种Key-Value型的NoSQL(Not Only SQL)，Redis是REmote DIctionary Server(远程字典服务器）的缩写，是一个用C 语言开发的一个开源的高性能键值对（key-value）数据库，并允许其他应用通过`TCP协议读写字典中的内容`。
 
 它通过提供多种键值数据类型来适应不同场景下的存储需求，目前为止 Redis 支持的键值数据类型如下：
 
@@ -33,20 +35,11 @@ Redis的所有数据都存储在内存中。在一台普通的笔记本电脑上
 Redis虽然作为数据库开发的，但还有其他功能:
 
 - `缓存`:Redis可以为每个键设置`生存时间(Time To Live，TTL）`，生存时间到期后键会自动被删除。这一功能配合出色的性能让Redis可以作为缓存系统来使用，而且由于Redis支持`持久化`和丰富的数据类型，使其成为了`另一个非常流行的缓存系统Memcached的有力竞争者`。
-- `队列系统`(Redis的列表类型键可以用来实现队列，并且支持阻塞式读取，可以很容易地实现一个高性能的优先级队列。同时在更高层面上，Redis还支持“发布/订阅”的消息模式，可以基于此构建聊天室等系统).
+- `队列系统`(Redis的列表类型键可以用来实现队列，并且支持阻塞式读取，可以很容易地实现一个高性能的优先级队列。同时在更高层面上，Redis还支持“发布/订阅”的消息模式，可以基于此构建聊天室等系统).-但是谨慎这样使用,消息队列不是redis的设计初衷.
 - LRU: Redis还可以限定数据占用的最大内存空间，在数据达到空间限制后可以按照一定的规则自动淘汰不需要的键、
-
-## Redis与Memcached
-
-`在性能上Redis是单线程模型，而Memcached支持多线程，所以在多核服务器上后者的性能更高一些`。然而,Redis的性能已经足够优异，在绝大部分场合下其性能都不会成为瓶颈。所以更应该关心的是二者在功能上的区别，`如果需要用到高级的数据类型或是持久化等功能，Redis将会是Memcached很好的替代品`。
-
-## Redis命令以及语言支持
-
-Redis提供了一百多个命令，听起来很多，但是常用的却只有十几个，并且每个命令都很容易记忆
-
-Redis提供了几十种不同编程语言的客户端库，使得在程序中与Redis进行交互变得更容易。
 
 # 命令文档
 
-- [](http://doc.redisfans.com/index.html)
-- [](https://redis.io/commands)
+- [http://doc.redisfans.com/index.html](http://doc.redisfans.com/index.html)
+- [https://redis.io/commands](https://redis.io/commands)
+- [https://www.redis.net.cn/tutorial/3524.html](https://www.redis.net.cn/tutorial/3524.html)
