--- a/Database/Redis/1.1_Redis安装.md
+++ b/Database/Redis/1.1_Redis安装.md
@@ -35,6 +35,23 @@ make test
 
 # 如果在编译后执行了make install命令，这些程序会被复制到/usr/local/bin目录内
 make install
+
+# 或者 PREFIX参数指定redis的安装目录
+make install PREFIX=/usr/local/redis
+
+# 把源码目录下的配置文件拷贝到/usr/local/bin下
+
+# 修改配置文件：把daemonize后面的参数改为yes(设置后台允许)
+
+./redis-server redis.conf
+
+ps -ef | grep -i redis
+
+# 查看version
+redis-server --version
+
+# 停止redis
+redis-cli -h 127.0.0.1 -p 6379 shutdown
 ```
 
 除了手工编译外，还可以使用操作系统中的软件包管理器来安装Redis，但目前大多数软件包管理器中的Redis的版本都较古老。考虑到Redis的每次升级都提供了对以往版本的问题修复和性能提升，使用最新版本的Redis往往可以提供更加稳定的体验。如果希望享受包管理器带来的便利，在安装前请确认您使用的软件包管理器中Redis的版本并了解该版本与最新版之间的差异。`http://redis.io/topics/problems中列举了一些在以往版本中存在的已知问题。`
@@ -53,5 +70,5 @@ make install
 `/usr/local/bin/redis-server /etc/redis/redis.conf   # 指定配置文件 启动`
 
 - redis-cli向Redis Server发送命令时会自动按照默认配置(向服务器地址为127.0.0.1，端口号6379发送命令）,如关闭Redis: `redis-cli SHUTDOWN`
-- 通过-h和-p参数可以自定义地址和端口号：`redis-cli -h 127.0.0.1 -p 6379`
+- 通过-h和-p参数可以自定义地址和端口号：`redis-cli -h 127.0.0.1 -p 6379` -a <password>
 - 或者不附带参数运行redis-cli，这样会进入交互模式.
