--- a/Database/Redis/2.0_Redis配置文件.md
+++ b/Database/Redis/2.0_Redis配置文件.md
@@ -40,8 +40,27 @@ pidfile /var/run/redis.pid
 # Redis默认监听端口为6379,如果设置0表示不监听任何连接
 port 6379
 
-# 绑定的主机地址
+# 绑定的主机地址(本机的网卡对应的IP地址，每一个网卡都有一个IP地址)
+# 如果指定了bind，则说明只允许来自指定网卡的Redis请求。如果没有指定，就说明可以接受来自任意一个网卡的Redis请求。
+# 如果你随便写一个ip地址,redis就启动不起来,因为因为我们没有对应的网卡IP地址.
+# 这就说明了bind并不是指定redis中可以接受来自哪些服务器请求的IP地址。
 bind 127.0.0.1
+# bind 127.0.0.1的解释：（只有本机可以连接，而其他不可以连接,这是非常安全的,因为只有本机可以访问127.0.0.1,就算不设置密码，也是安全的，除非有人登入到你的服务器上。)
+# 我们从ifconfig可以看出：lo网卡（对应127.0.0.1IP地址）：是一个回环地址（Local Loopback），也就是只有本地才能访问到这个回环地址,那么来自这个lo网卡的计算机只有本机，所以只有本机可以访问，而其他计算机不能访问。
+# bind 172.18.235.206的话，只要通过这个网卡地址（172.18.235.206）来的Redis请求，都可以访问redis。
+# bind 172.18.235.206的话，只要通过这个网卡地址（172.18.235.206）来的Redis请求，都可以访问redis。
+# 当你们不使用那个回环地址，外部的计算机都可以访问本机的Redis服务器。
+# 如果我们想限制只有指定的主机可以连接到redis中，我们只能通过防火墙来控制，而不能通过redis中的bind参数来限制。    
+
+# 如果你的bind设置为：bind 0.0.0.0，表示所有主机都可以连接到redis。（前提：你的服务器必须开放redis的端口）。这时设置密码，就会多一层保护，只有知道密码的才可以访问。也就是任何知道密码的主机都可以访问到你的redis。
+
+
+# redis中的【protected-mode】的理解：
+# protected-mode是redis本身的一个安全层，这个安全层的作用：就是只有【本机】可以访问redis，其他任何都不可以访问redis。这个安全层开启(起作用)的条件是 必须满足下面三个条件，不然安全层处于关闭状态：
+# （1）protected-mode yes（处于开启）
+# （2）没有bind指令。原文：The server is not binding explicitly to a set of addresses using the "bind" directive.
+#（3）没有设置密码。原文：No password is configured。
+# 这时redis的保护机制就会开启。开启之后，只有本机才可以访问redis。 如果上面三个条件只要有一个不满足，就不会开启保护机制。
 
 # 当客户端闲置多长时间后关闭连接，如果指定为0，表示关闭该功能
 timeout 300
@@ -82,7 +101,10 @@ slaveof <masterip> <masterport>
 masterauth <master-password>
 
 # 设置Redis连接密码，如果配置了连接密码，客户端在连接Redis时需要通过AUTH <password>命令提供密码，默认关闭
+# 警告：由于Redis非常快，外部用户可以尝试每秒15万的密码。 这意味着你应该使用非常强大的密码，否则很容易破解。
 requirepass foobared
+# 注意,在windows上是在redis.windows.conf中修改,启动方式指定配置文件，每次启动都要指定: redis-server.exe redis.windows.conf
+# 否则不生效
 
 # 设置同一时间最大客户端连接数，默认无限制，Redis可以同时打开的客户端连接数为Redis进程可以打开的最大文件描述符数，如果设置 maxclients 0，表示不作限制。当客户端连接数到达限制时，Redis会关闭新的连接并向客户端返回max number of clients reached错误信息
 maxclients 128
@@ -90,10 +112,10 @@ maxclients 128
 # 指定Redis最大内存限制，Redis在启动时会把数据加载到内存中，达到最大内存后，Redis会先尝试清除已到期或即将到期的Key，当此方法处理 后，仍然到达最大内存设置，将无法再进行写入操作，但仍然可以进行读取操作。Redis新的vm机制，会把Key存放内存，Value会存放在swap区
 maxmemory <bytes>
 
-# 指定是否在每次更新操作后进行日志记录，Redis在默认情况下是异步的把数据写入磁盘，如果不开启，可能会在断电时导致一段时间内的数据丢失。因为 redis本身同步数据文件是按上面save条件来同步的，所以有的数据会在一段时间内只存在于内存中。默认为no.
+# ##开启AOF，禁用snapshot(rdb)
 appendonly no
 
-# 指定更新日志文件名，默认为appendonly.aof
+# 指定aof件名，默认为appendonly.aof
 appendfilename appendonly.aof
 
 # 指定更新日志条件，共有3个可选值： 
