--- a/Database/Redis/3.3_散列类型.md
+++ b/Database/Redis/3.3_散列类型.md
@@ -2,7 +2,9 @@
 
 ## 使用场景
 
-结构化存储
+结构化存储,hash特别适合用于存储对象.
+
+举个例子： 最近做的一个电商网站项目的首页就使用了redis的hash数据结构进行缓存，因为一个网站的首页访问量是最大的，所以通常网站的首页可以通过redis缓存来提高性能和并发量。
 
 ![](pics/hash的应用场景.png)
 
