--- a/Database/Redis/3.4_列表类型.md
+++ b/Database/Redis/3.4_列表类型.md
@@ -6,7 +6,7 @@
 
 ## 使用场景
 
-1. 列表类型的特性能非常快速地完成关系数据库难以应付的场景：如社交网站的新鲜事，我们关心的只是最新的内容，使用列表类型存储，即使新鲜事的总数达到几千万个，获取其中最新的100条数据也是极快的(最新鲜的事总是在队列的两端)
+1. 列表类型的特性能非常快速地完成关系数据库难以应付的场景：如微博的新鲜事，我们关心的只是最新的内容，使用列表类型存储，即使新鲜事的总数达到几千万个，获取其中最新的100条数据也是极快的(最新鲜的事总是在队列的两端)
 2. 在两端插入记录的时间复杂度是0(1)，列表类型也适合用来记录日志，可以保证加入新日志的速度不会受到已有日志数量的影响
 3. 借助列表类型，Redis还可以作为队列使用
 4. 与散列类型键最多能容纳的字段field数量相同，一个列表类型键最多能容纳2^32-1个元素
