--- a/Database/Redis/4.4_消息通知.md
+++ b/Database/Redis/4.4_消息通知.md
@@ -1,3 +1,9 @@
+# Redis与消息队列
+
+不要使用redis去做消息队列，这不是redis的设计目标。但实在太多人使用redis去做去消息队列，redis的作者看不下去，另外基于redis的核心代码，另外实现了一个消息队列disque： antirez/disque:https://github.com/antirez/disque部署、协议等方面都跟redis非常类似，并且支持集群，延迟消息等等。
+
+我在做网站过程接触比较多的还是使用redis做缓存，比如秒杀系统，首页缓存等等。
+
 ## 消息通知
 
 ### 使用场景
