--- a/Database/Redis/6.3.0_redis-sentinel.md
+++ b/Database/Redis/6.3.0_redis-sentinel.md
@@ -1,18 +1,19 @@
 # Redis HA(High Available) 方案
 
->微服务做的就是高可用，高性能，高并发.你搭建的所有服务器都要做到高可用，有了高可用，你才能做到高性能，高并发.
+微服务做的就是高可用(就是一直可用,要解决单点故障问题)，高性能，高并发.
 
-`HA-高可用`，就是一直可用,要解决单点故障问题.
+你搭建的所有服务器都要做到高可用，有了高可用，你才能做到高性能，高并发.
+
+## Redis sentinel和Redis cluster的区别
+
+sentinel 是解决 HA 问题的，cluster(集群)是解决主从复制问题的，不重复，并且经常一起用
 
 ## Redis HA方案：
 
-- keepalived(之前的老技术，可以先不用看)： 通过 keepalived 的虚拟 IP，提供主从的统一访问，在主出现问题时， 通过 keepalived 运行脚本将从提升为主，待主恢复后先同步后自动变为主，该方案的好处是主从切换后，应用程序不需要知道(因为访问的虚拟 IP 不变)，坏处是引入 keepalived 增加部署复杂性，在有些情况下会导致数据丢失
 - zookeeper： 通过 zookeeper 来监控主从实例， 维护最新有效的 IP， 应用通过 zookeeper 取得 IP，对 Redis 进行访问，`该方案需要编写大量的监控代码,这就是这种方案的问题.zookeeper不是为你redis服务的，它是一个分布式协调技术解决方案，解决方案给你了，代码要你自己写。`
 - sentinel(`官方推荐做redis的高可用`)： 通过 Sentinel(`专门为redis服务的单点故障解决方案`) 监控主从实例，自动进行故障恢复.
 
 ![](pics/部署逻辑图.png)
-
-注意：sentinel 是解决 HA 问题的，cluster(集群)是解决主从复制问题的，不重复，并且经常一起用
 
 ## redis-sentinel(哨兵)
 
