--- a/Database/Redis/6.3.3_redis-sentinel使用docker部署示例.md
+++ b/Database/Redis/6.3.3_redis-sentinel使用docker部署示例.md
@@ -17,7 +17,8 @@ services:
     container_name: redis-master
     # 指定端口映射
     ports:
-      - 6379:6379 # 第一个6379是外部服务器端口，第二个是容器内部的port
+      # 第一个6379是外部服务器端口，第二个是容器内部的port
+      - 6379:6379
 
   slave1:
     image: redis
@@ -81,12 +82,6 @@ services:
 
 ```
 # vim sentinel.conf (写入下面的内容)
-# cp sentinel.conf sentinel1.conf && cp sentinel.conf sentinel2.conf && cp sentinel.conf sentinel3.conf
-# docker-compose up -d
-# docker ps -a
-# docker exec -it redis-sentinel-1 /bin/bash # 进入sentinel这个容器
-# 进入sentinel容器后，要连上redis(和通过redis desktop manager连上redis一样)，通过命名: redis-cli -p 26379
-# 然后查询：sentinel master mymaster [sentinel master sentinel集群名称]
 
 port 26379
 dir /tmp
@@ -96,6 +91,14 @@ sentinel down-after-milliseconds mymaster 30000
 sentinel parallel-syncs mymaster 1
 sentinel failover-timeout mymaster 180000
 sentinel deny-scripts-reconfig yes
+
+# 然后
+# cp sentinel.conf sentinel1.conf && cp sentinel.conf sentinel2.conf && cp sentinel.conf sentinel3.conf
+# docker-compose up -d
+# docker ps -a
+# docker exec -it redis-sentinel-1 /bin/bash # 进入sentinel这个容器
+# 进入sentinel容器后，要连上redis(和通过redis desktop manager连上redis一样)，通过命名: redis-cli -p 26379
+# 然后查询：sentinel master mymaster [sentinel master sentinel集群名称]
 ```
 
 # 查看集群是否生效
