--- a/Docker/04_进入容器.md
+++ b/Docker/04_进入容器.md
@@ -1,12 +1,8 @@
 # 进入容器
 
-在使用 -d 参数时，容器启动后会进入后台。
-
 某些时候需要进入容器进行操作，包括使用 docker attach 命令或 docker exec 命令，推荐大家使用 docker exec 命令，原因会在下面说明。
 
 ## attach 命令
-
-docker attach 是 Docker 自带的命令。下面示例如何使用该命令。
 
 ```shell
 $ docker run -dit ubuntu
@@ -33,14 +29,15 @@ $ docker run -dit ubuntu
 69d137adef7a8a689cbcb059e94da5489d3cddd240ff675c640c8d96e84fe1f6
 
 $ docker container ls
-CONTAINER ID        IMAGE               COMMAND             CREATED             STATUS              PORTS               NAMES
-69d137adef7a        ubuntu:latest       "/bin/bash"         18 seconds ago      Up 17 seconds                           zealous_swirles
+
+CONTAINER ID           
+69d137adef7a        
 
 $ docker exec -i 69d1 bash
 
 # 如果从这个 stdin 中 exit，不会导致容器的停止。
 # 这就是为什么推荐大家使用 docker exec 的原因。
-$ docker exec -it 69d1 bash
+$ docker exec -it 69d1 bash 
 root@69d137adef7a:/#
 ```
 
