--- a/Database/Redis/3.6_有序集合类型.md
+++ b/Database/Redis/3.6_有序集合类型.md
@@ -16,6 +16,7 @@
 3. 列表中不能简单地调整某个元素的位置，但是有序集合可以（通过更改这个元素的分数）
 4. 有序集合要比列表类型更耗费内存
 
+举例： 在直播系统中，实时排行信息包含直播间在线用户列表，各种礼物排行榜，弹幕消息（可以理解为按消息维度的消息排行榜）等信息，适合使用Redis中的SortedSet结构进行存储。
 
 # 有序集合的命令为什么以Z开头?
 
