--- a/Database/Redis/4.2_生存时间.md
+++ b/Database/Redis/4.2_生存时间.md
@@ -4,7 +4,7 @@
 
 在实际的开发中经常会遇到一些有时效的数据，比如限时优惠活动、缓存或验证码等，过了一定的时间就需要删除这些数据。在关系数据库中一般需要额外的一个字段记录到期时间，然后定期检测删除过期数据。而在Redis中可以使用EXPIRE命令设置一个键的生存时间，到时间后Redis会自动删除它。
 
-### 常用命令
+## 常用命令
 
 >EXPIRE命令使用方法: `EXPIRE key seconds`，其中seconds参数表示键的生存时间，单位是秒
 
@@ -78,6 +78,8 @@ SET cache:rank, rank
 EXPIRE cache:rank, 7200
 EXEC
 ```
+
+# MySQL里有2000w数据，Redis中只存20w的数据，如何保证Redis中的数据都是热点数据（redis有哪些数据淘汰策略？？？）
 
 #### Redis键生存时间过短和多长导致的问题?
 
