--- a/Database/Redis/6.1_持久化.md
+++ b/Database/Redis/6.1_持久化.md
@@ -6,38 +6,29 @@
 
 Redis支持两种方式的持久化，可以单独使用其中一种或将二者结合使用。
 
-- RDB 快照模式，该模式用于生成某个时间点的备份信息，并且会对当前的key value进行编码存储到rdb文件中
-- AOF 持久化模式，会记录服务器所有的写请求，在服务重启的时候通过回放执行命令请求来恢复原有的数据,AOF文件记录的是原始的Redis写请求命令
+- RDB 快照模式(也是默认的方式)，将内存中数据以快照的方式写入到二进制文件中,默认的文件名为dump.rdb.可以通过配置dir和dbfilename两个参数分别指定快照文件的存储路径和文件名。
 
-1. `RDB持久化`可以在`指定的时间间隔`内生成数据集的时间点快照（point-in-time snapshot）
+可以通过配置设置自动做快照持久化的方式。我们可以配置 redis在 n 秒内如果超过 m 个 key 被修改就自动做快照，下面是默认的快照保存配置：
+
+```
+save 900 1 #900 秒内如果超过 1 个 key 被修改，则发起快照保存
+save 300 10 #300 秒内容如超过 10 个 key 被修改，则发起快照保存
+save 60 10000
+```
+
+- AOF(Append-Only file) 模式: 会记录服务器所有的写请求，在服务重启的时候通过回放执行命令请求来恢复原有的数据,AOF文件记录的是原始的Redis写请求命令
+
 2. `AOF持久化记录服务器执行的所有写操作命令`，并`在服务器启动时，通过重新执行这些命令来还原数据集`。AOF文件中的命令全部以 Redis协议的格式来保存，新命令会被追加到文件的末尾。 Redis 还可以在后台对 AOF 文件进行重写（rewrite），使得 AOF 文件的体积不会超出保存数据集状态所需的实际大小.
 3. Redis 还可以同时使用 AOF 持久化和 RDB 持久化。 在这种情况下， `当 Redis 重启时， 它会优先使用 AOF 文件来还原数据集， 因为 AOF 文件保存的数据集通常比 RDB 文件所保存的数据集更完整。`
 4. 你甚至可以关闭持久化功能，让数据只在服务器运行时存在。
 
-## RDB和AOF持久化方式的异同
+# RDB和AOF持久化方式的异同
 
->了解 RDB 持久化和 AOF 持久化之间的异同是非常重要的.
-
-### RDB方式特点以及优缺点介绍(Redis默认采用的持久化方式)
-
-* RDB方式的持久化是通过快照（snapshotting）完成的，`当符合一定条件时Redis会自动将内存中的所有数据进行快照并存储在硬盘上`。
-* 进行快照的条件可以由用户在配置文件中自定义，`由两个参数构成：时间和改动的键的个数`。当在指定的时间内被更改的键的个数大于指定的数值时就会进行快照
-* Redis默认会将快照文件存储在当前目录的dump.rdb文件中，可以通过配置dir和dbfilename两个参数分别指定快照文件的存储路径和文件名。
-
->`RDB是Redis默认采用的持久化方式，在配置文件中已经预置了3个条件：`
-
-```
-# save参数指定了快照条件，可以存在多个条件，条件之间是“或”的关系。
-# save900 1的意思是在15分钟（900秒钟）内有至少一个键被更改则进行快照。
-# 如果想要禁用自动快照，只需要将所有的save参数删除即可。
-save 900 1
-save 300 10
-save 60 10000
-```
+## RDB方式特点以及优缺点介绍
 
 >理清Redis实现快照的过程对我们了解快照文件的特性有很大的帮助。快照的过程如下:
 
-1. Redis使用fork函数复制一份当前进程（父进程）的副本（子进程）；
+1. Redis使用fork函数创建当前进程的子进程
 2. 父进程继续接收并处理客户端发来的命令，而子进程开始将内存中的数据写入硬盘中的临时文件
 3. 当子进程写入完所有数据后会用该临时文件替换旧的RDB文件，至此一次快照操作完成
 
@@ -49,56 +40,63 @@ save 60 10000
 
 通过上述过程可以发现Redis在进行快照的过程中不会修改RDB文件，`只有快照结束后才会将旧的文件替换成新的，也就是说任何时候RDB文件都是完整的。这使得我们可以通过定时备份RDB文件来实现Redis数据库备份。`RDB文件是经过压缩（可以配置rdbcompression参数以禁用压缩节省CPU占用）的二进制格式，所以占用的空间会小于内存中的数据大小，更加利于传输。
 
-#### RDB手动快照
+## RDB手动快照
 
-除了自动快照，还可以手动发送SAVE或BGSAVE(即background save)命令让Redis执行快照，两个命令的区别在于，前者是由主进程进行快照操作，会阻塞住其他请求，后者会通过fork子进程进行快照操作。
+除了自动快照，还可以手动发送SAVE或BGSAVE(即background save)命令让Redis执行快照，两个命令的区别在于，前者是由主进程进行快照操作，会阻塞住其他请求,不推荐使用，后者会通过fork子进程进行快照操作(不会影响主进程处理client请求),而且如果写操作比较多,就会有很多磁盘IO操作,影响性能.
 
-### 从rdb文件恢复数据
+## 从rdb文件恢复数据
 
 Redis启动后会读取RDB快照文件，将数据从硬盘载入到内存。根据数据量大小与结构和服务器性能不同，这个时间也不同。通常将一个记录一千万个字符串类型键、大小为1GB的快照文件载入到内存中需要花费20～30秒钟。
 
-### RDB使用场景考量
+## RDB使用场景考量
 
 通过RDB方式实现持久化，一旦Redis异常退出，就会丢失最后一次快照以后更改的所有数据。这就需要开发者根据具体的应用场合，通过组合设置自动快照条件的方式来将可能发生的数据损失控制在能够接受的范围。如果数据很重要以至于无法承受任何损失，则可以考虑使用AOF方式进行持久化。
 
->RDB的优点:
+## RDB的优点:
 
-1. RDB是一种表示某个即时点的Redis数据的紧凑文件。RDB文件适合用于备份。例如，你可能想要每小时归档最近24小时的RDB文件，每天保存近30天的RDB快照。`这允许你很容易的恢复不同版本的数据集以容灾。`
-2. RDB非常适合于灾难恢复，作为一个紧凑的单一文件，可以被传输到远程的数据中心，或者是Amazon S3(可能得加密)。
+1. RDB文件适合用于备份。很适合容灾。
 3. RDB最大化了Redis的性能，因为Redis父进程持久化时唯一需要做的是启动(fork)一个子进程，由子进程完成所有剩余工作。父进程实例不需要执行像磁盘IO这样的操作。
 4. RDB在重启保存了大数据集的实例时比AOF要快。
 
->RDB 的缺点
+## RDB 的缺点
 
 1. 当你需要在Redis停止工作(例如停电)时最小化数据丢失，RDB可能不太好。虽然可以配置不同的保存点(save point)来保存RDB文件(例如，至少5分钟和对数据集100次写之后，但是你可以有多个保存点)。然而，你通常每隔5分钟或更久创建一个RDB快照，所以一旦Redis因为任何原因没有正确关闭而停止工作，你就得做好最近几分钟数据丢失的准备了。
 2. RDB需要经常调用fork()子进程来持久化到磁盘。如果数据集很大的话，fork()比较耗时，结果就是，当数据集非常大并且CPU性能不够强大的话，Redis会停止服务客户端几毫秒甚至一秒。AOF也需要fork()，但是你可以调整多久频率重写日志而不会有损(trade-off)持久性(durability)。
 
-### AOF方式特点以及优缺点介绍
+## AOF方式特点以及优缺点介绍
 
-    AOF 的优点:
+## AOF 的优点:
 
-使用AOF会更具有可持久性(durable)：你可以有很多不同的fsync策略:
+使用AOF会更具有可持久性(durable)
 
-* 没有fsync
-* 每秒fsync(默认的)
-* 每次请求时fsync
+由于快照方式是在一定间隔时间做一次的，所以如果 redis 意外 down 掉的话，就会丢失最后一次快照后的所有修改。如果应用要求不能丢失任何修改的话，可以采用 aof 持久化方式。下面介绍 Append-only file:aof 比快照方式有更好的持久化性，是由于在使用 aof 持久化方式时,redis 会将每一个收到的写命令都通过 write 函数追加到文件中(默认是 appendonly.aof)。当 redis 重启时会通过重新执行文件中保存的写命令来在内存中重建整个数据库的内容。
+
+当然由于 os 会在内核中缓存 write 做的修改，所以可能不是立即写到磁盘上。这样 aof 方式的持久化也还是有可能会丢失部分修改。不过我们可以通过配置文件告诉 redis 我们想要通过 fsync 函数强制 os 写入到磁盘的时机。有三种方式如下（默认是：每秒 fsync 一次）
+
+```
+# 默认情况下Redis没有开启AOF（append only file-仅附加文件）方式的持久化
+appendonly yes //启用 aof 持久化方式
+# appendfsync always // 每次请求时fsync,即收到写命令就立即写入磁盘，最慢，但是保证完全的持久化
+appendfsync everysec //每秒fsync(默认的),即每秒钟写入磁盘一次，在性能和持久化方面做了很好的折中
+# appendfsync no //没有fsync,完全依赖 os，性能最好,持久化没保证
+```
 
 >默认的每秒fsync策略，写性能也仍然很不错(fsync是由后台线程完成的，主线程继续努力地执行写请求)，即便损失数据，也仅仅损失一秒钟的写数据。
+
+aof 的方式也同时带来了另一个问题。持久化文件会变的越来越大。例如我们调用 incr test命令 100 次，文件中必须保存全部的 100 条命令，其实有 99 条都是多余的。因为要恢复数据库的状态其实文件中保存一条 set test 100 就够了。为了压缩 aof 的持久化文件。 redis 提供了 bgrewriteaof 命令。收到此命令 redis 将使用与快照类似的方式将内存中的数据以命令的方式保存到临时文件中，最后替换原来的文件。
 
 1. AOF日志是一个追加文件，所以不需要定位，在断电时也没有损坏问题。即使由于某种原因文件末尾是一个写到一半的命令(磁盘满或者其他原因),redis-check-aof工具也可以很轻易的修复。
 2. 当AOF文件变得很大时，Redis会自动在后台进行重写。重写是绝对安全的，因为Redis继续往旧的文件中追加，使用创建当前数据集所需的最小操作集合来创建一个全新的文件，一旦第二个文件创建完毕，Redis就会切换这两个文件，并开始往新文件追加。
 3. AOF文件里面包含一个接一个的操作，以易于理解和解析的格式存储。你也可以轻易的导出一个AOF文件。例如，即使你不小心错误地使用FLUSHALL命令清空一切，如果此时并没有执行重写，你仍然可以保存你的数据集，你只要停止服务器，删除最后一条命令，然后重启Redis就可以。
 
-    AOF 的缺点:
+## AOF 的缺点:
 
 1. 对同样的数据集，AOF文件通常要大于等价的RDB文件。
 2. AOF可能比RDB慢，这取决于准确的fsync策略。通常fsync设置为每秒一次的话,性能仍然很高，如果关闭fsync，即使在很高的负载下也和RDB一样的快。不过，即使在很大的写负载情况下，RDB还是能提供能好的最大延迟保证。
 
 >Redis AOF是通过递增地更新一个已经存在的状态，像MySQL或者MongoDB一样，而RDB快照是一次又一次地从头开始创造一切，概念上更健壮。但是，1)要注意Redis每次重写AOF时都是以当前数据集中的真实数据从头开始，相对于一直追加的AOF文件(或者一次重写读取老的AOF文件而不是读内存中的数据)对bug的免疫力更强。2)我们还没有收到一份用户在真实世界中检测到崩溃的报告。
 
-默认情况下Redis没有开启AOF（append only file-仅附加文件）方式的持久化，可以通过appendonly参数开启：`appendonly yes`
-
-开启AOF持久化后每执行一条会更改Redis中的数据的命令，Redis就会将该命令写入硬盘中的AOF文件。AOF文件的保存位置和RDB文件的位置相同，都是通过dir参数设置的，默认的文件名是appendonly.aof，可以通过appendfilename参数修改：`appendfilename appendonly.aof`
+开启AOF持久化后每执行一条会更改Redis中的数据的命令，Redis就会将该命令写入硬盘中的AOF文件(可能只是写在内核缓冲区,还没有来及写入硬盘,要看fsync策略)。AOF文件的保存位置和RDB文件的位置相同，都是通过dir参数设置的，默认的文件名是appendonly.aof，可以通过appendfilename参数修改：`appendfilename appendonly.aof`
 
 ```shell
 # AOF持久化的具体实现，假设在开启AOF持久化的情况下执行了如下4个命令
