--- a/Docker/01.0_Docker-quick-start.md
+++ b/Docker/01.0_Docker-quick-start.md
@@ -1,7 +1,5 @@
 ## Docker 的安装
 
-Docker 是一个开源的商业产品，有两个版本：社区版（Community Edition，缩写为 CE）和企业版（Enterprise Edition，缩写为 EE）。企业版包含了一些收费服务，个人开发者一般用不到。下面的介绍都针对社区版。
-
 [Docker CE 的安装请参考官方文档](https://docs.docker.com/install/linux/docker-ce/centos/)
 
 ```shell
@@ -24,38 +22,27 @@ $ docker info
 # Docker 需要用户具有 sudo 权限，为了避免每次命令都输入sudo，可以把用户加入 Docker 用户组（官方文档）
 $ sudo usermod -aG docker $USER
 
-# Docker 是服务器----客户端架构。命令行运行docker命令的时候，需要本机有 Docker 服务。如果这项服务没有启动，可以用下面的命令启动（官方文档）。
-
-# service 命令启动docker的用法
-$ sudo service docker start
+# Docker 是服务器-客户端架构。命令行运行docker命令的时候，需要本机的Docker服务(docker server)启动.
+# 启动docker的用法
+sudo service docker start
 
 # systemctl 命令的启动docker的用法
 $ sudo systemctl start docker
+
+service docker status
 ```
 
-## image 文件
+## Dockerfile 文件
 
-Docker 把应用程序及其依赖，打包在 image 文件里面。只有通过这个文件，才能生成 Docker 容器。image 文件可以看作是容器的模板。Docker 根据 image 文件生成容器的实例。同一个 image 文件，可以生成多个同时运行的容器实例。
+学会使用 image 文件以后，接下来的问题就是，如何可以生成 image 文件？如果你要推广自己的软件，势必要自己制作 image 文件。
 
-image 是二进制文件。实际开发中，一个 image 文件往往通过继承另一个 image 文件，加上一些个性化设置而生成。举例来说，你可以在 Ubuntu 的 image 基础上，往里面加入 Apache 服务器，形成你的 image。
+这就需要用到 Dockerfile 文件。它是一个文本文件Docker 根据 该文件生成二进制的 image 文件。
 
-```shell
-# 列出本机的所有 image 文件。
-$ docker image ls
-
-# 删除 image 文件
-$ docker image rm [imageName]
-```
-
-image 文件是通用的，一台机器的 image 文件拷贝到另一台机器，照样可以使用。一般来说，为了节省时间，我们应该尽量使用别人制作好的 image 文件，而不是自己制作。即使要定制，也应该基于别人的 image 文件进行加工，而不是从零开始制作。
-
-为了方便共享，image 文件制作完成后，可以上传到网上的仓库。Docker 的官方仓库 Docker Hub 是最重要、最常用的 image 仓库。此外，出售自己制作的 image 文件也是可以的。
+下面通过一个实例，演示如何编写 Dockerfile 文件。
 
 ## 实例：hello world
 
 下面，我们通过最简单的 image 文件"hello world"，感受一下 Docker。
-
-需要说明的是，国内连接 Docker 的官方仓库很慢，还会断线，需要将默认仓库改成国内的镜像网站，具体的修改方法在下一篇文章的第一节。有需要的朋友，可以先看一下。
 
 首先，运行下面的命令，将 image 文件从仓库抓取到本地。
 
@@ -77,11 +64,6 @@ $ docker image ls
 # docker container run命令会从 image 文件，生成一个正在运行的容器实例。
 # 注意，docker container run命令具有自动抓取 image 文件的功能。如果发现本地没有指定的 image 文件，就会从仓库自动抓取。因此，前面的docker image pull命令并不是必需的步骤。
 $ docker container run hello-world
-
-# 如果运行成功，你会在屏幕上读到下面的输出。
-# 输出这段提示以后，hello world就会停止运行，容器自动终止。
-Hello from Docker!
-This message shows that your installation appears to be working correctly.
 ....
 
 
@@ -103,30 +85,3 @@ docker image ls -f since=mongo:3.2
 # 此外，如果镜像构建时，定义了 LABEL，还可以通过 LABEL 来过滤。
 $ docker image ls -f label=com.example.version=0.1
 ```
-
-## 容器文件(Docker容器通过 Docker 镜像来创建)
-
-image镜像文件生成的容器实例(container)，本身也是一个文件，称为容器文件。也就是说，一旦容器生成，就会同时存在两个文件： image 文件和容器文件(docker命令也可以这么分，分成对image的操作和对容器文件container的操作)。而且关闭容器并不会删除容器文件，只是容器停止运行而已。
-
-```shell
-# 列出本机正在运行的容器
-$ docker container ls
-
-# 列出本机所有容器，包括终止运行的容器
-$ docker container ls --all
-
-# 上面命令的输出结果包括容器的ID。很多地方都需要提供这个 ID，比如上一节终止容器运行的docker container kill命令。
-
-# 终止运行的"容器文件"，依然会占据硬盘空间，可以使用docker container rm命令删除。
-$ docker container rm [containerID]
-
-#运行上面的命令之后，再使用docker container ls --all命令，就会发现被删除的容器文件已经消失了。
-```
-
-## Dockerfile 文件
-
-学会使用 image 文件以后，接下来的问题就是，如何可以生成 image 文件？如果你要推广自己的软件，势必要自己制作 image 文件。
-
-这就需要用到 Dockerfile 文件。它是一个文本文件Docker 根据 该文件生成二进制的 image 文件。
-
-下面通过一个实例，演示如何编写 Dockerfile 文件。
