--- a/JAVA/core/src/main/resources/并发编程/2.0-Java并发编程基础API/2.9-守护线程.md
+++ b/JAVA/core/src/main/resources/并发编程/2.0-Java并发编程基础API/2.9-守护线程.md
@@ -3,21 +3,22 @@
 1. User Thread(用户线程)
 2. Daemon Thread(守护线程)
 
-Daemon的作用是为其他线程的运行提供服务,其实User Thread线程和Daemon Thread守护线程本质上没啥区别，唯一的区别之处就在虚拟机的离开：如果User Thread全部撤离，那么Daemon Thread也就没啥线程好服务的了，所以虚拟机也就退出了
+Daemon的作用是为其他线程的运行提供服务,其实User Thread线程和Daemon Thread守护线程本质上没啥区别，唯一的区别之处在于如果User Thread全部撤离，那么Daemon Thread也就没啥线程好服务的了.
 
-用户也可以自行的设定守护线程，方法:
+设置守护线程的方法:
 ```java
-public final void setDaemon(boolean on);
+Thread t = new Thread("daemon thread");
+t.setDaemon(true);//设置守护线程
+t.start();
 ```
 
 有几点需要注意:
 
 1. thread.setDaemon(true)必须在thread.start()之前设置，你不能把正在运行的常规线程设置为守护线程，否则会抛出一个IllegalThreadStateException异常。
 2. 在Daemon线程中产生的新线程也是Daemon的。
-3. 不是所有的应用都适合分配给Daemon线程来进行服务，比如读写操作或者计算逻辑。因为在Daemon Thread还没来的及进行操作时，虚拟机可能已经退出了。
-4. The Java Virtual Machine exits when the only threads running are all daemon threads.JVM会在所有执行的线程都是守护线程的时候退出。
+4. JVM会在所有执行的线程都是守护线程的时候退出。
 
->JRE判断程序是否执行结束的标准是所有的前台执线程行完毕了，而不管后台线程的状态，因此，在使用后台线程候一定要注意这个问题。 
+>JRE判断程序是否执行结束的标准是所有的前台执线程行完毕了，而不管后台的daemon线程的状态，因此，在使用后台线程候一定要注意这个问题。 
 
 ### Daemon线程的实际应用
 
