--- a/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.3-AbstractQueuedSynchronizer.md
+++ b/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.3-AbstractQueuedSynchronizer.md
@@ -191,4 +191,4 @@ boolean tryReleaseShared(int arg)
 
 顾名思义，独占锁就是同一时刻只能有一个线程获取到锁，而其他获取锁的线程只能处于同步队列中等待，只有获取锁的线程释放了锁，后继的线程才能够获取锁。
 
->案例:org.java.core.base.concurrent.chapter5.MutexImpl.java
+>案例:org.java.core.base.concurrent.chapter5.CustomAQSComponent.MutexImpl.java
