--- a/JAVA/EE/SpringBoot/docs/模板引擎.md
+++ b/JAVA/EE/SpringBoot/docs/模板引擎.md
@@ -1,20 +1,16 @@
 # 模板引擎
 
-在动态HTML实现上Spring Boot依然可以完美胜任，并且提供了多种模板引擎的默认配置支持,Spring Boot提供了默认配置的模板引擎主要有以下几种：
+在动态HTML实现上Spring Boot依然可以完美胜任，并且提供了多种模板引擎的默认配置支持
 
-1. Thymeleaf
+1. Thymeleaf(官方推荐）
 2. FreeMarker
 3. Velocity
 4. Groovy
 5. Mustache
 
->Spring Boot建议使用这些模板引擎，避免使用JSP，若一定要使用JSP将无法实现Spring Boot的多种特性
+>Spring Boot己经不再推荐使用JSP，若一定要使用JSP将无法实现Spring Boot的多种特性
 
 当你使用上述模板引擎中的任何一个，它们默认的模板配置路径为：src/main/resources/templates。当然也可以修改这个路径.
 
-#### Spring Boot MVC支持的视图引擎
+# 如何在Spring Boot中使用JSP
 
-Spring Boot MVC支持多种视图模板引擎，能自动检测并配置好几种引擎。比较常用的(官方推荐）是Thymeleaf。
-
-> 注意：在Spring早期Web项目中比较常见的JSP，Spring官方己经不再推荐在Spring
-Boot项目中使用。
