--- a/Database/MySQL/01_数据库的管理和使用.md
+++ b/Database/MySQL/01_数据库的管理和使用.md
@@ -6,8 +6,8 @@
 # mysql登录:
 mysql -h hostname -P port -u username -p
 
-# 数据库备份(从cmd命令行备份):
-mysqldump -u root -p test > d:\test.sql
+# 数据库备份(从cmd命令行备份db_blog这个数据库):
+mysqldump -uroot -h127.0.0.1 --databases db_blog -p > d:\test.sql
 
 # 数据库恢复(进入mysql控制台恢复),注意如果test.sql脚本中没有选择数据库，
 需要先选择数据库，如果没有数据库，要先创建数据库:
