--- a/Docker/01.0_Docker-quick-start.md
+++ b/Docker/01.0_Docker-quick-start.md
@@ -24,10 +24,10 @@ $ sudo usermod -aG docker $USER
 
 # Docker 是服务器-客户端架构。命令行运行docker命令的时候，需要本机的Docker服务(docker server)启动.
 # 启动docker的用法
-sudo service docker start
+service docker start
 
 # systemctl 命令的启动docker的用法
-$ sudo systemctl start docker
+systemctl start docker
 
 service docker status
 ```
