--- a/Docker/01.1_Docker获取镜像.md
+++ b/Docker/01.1_Docker获取镜像.md
@@ -1,6 +1,4 @@
-#获取镜像
-
-## 概述
+# 获取镜像
 
 之前提到过，Docker Hub 上有大量的高质量的镜像可以用，这里我们就说一下怎么获取这些镜像。
 
@@ -16,21 +14,12 @@
 ```shell
 $ docker pull ubuntu:16.04
 # 没有提供Docker 镜像仓库地址(即Docker Registry地址)，所以会从Docker Hub 获取镜像
-# 而镜像名称是 ubuntu:16.04，因此将会获取官方镜像 library/ubuntu 仓库中标签为 16.04 的镜像。
-
-16.04: Pulling from library/ubuntu
-bf5d46315322: Pull complete
-9f13e0ac480c: Pull complete
-e8988b5b3097: Pull complete
-40af181810e7: Pull complete
-e6f7c7e5c03e: Pull complete
-Digest: sha256:147913621d9cdea08853f6ba9116c2e27a3ceffecf3b492983ae97c3d643fbbe
-Status: Downloaded newer image for ubuntu:16.04
+# 而镜像名称是 ubuntu:16.04，因此将会获取官方镜像 library/ubuntu 仓库中标签为 16.04 的镜像
 ```
 
 ## 运行
 
-有了镜像后，我们就能够以这个镜像为基础启动并运行一个容器。以上面的 ubuntu:16.04 为例，如果我们打算启动里面的 bash 并且进行交互式操作的话，可以执行下面的命令。
+有了镜像后，我们就能够以这个镜像为基础运行一个容器。以上面的 ubuntu:16.04 为例，如果我们打算启动里面的 bash 并且进行交互式操作的话，可以执行下面的命令。
 
 ```shell
 $ docker run -it --rm \
