--- a/JAVA/EE/MyBatis/2.3_mybatis打印sql日志.md
+++ b/JAVA/EE/MyBatis/2.3_mybatis打印sql日志.md
@@ -237,10 +237,6 @@ logback.xml
 </configuration>
 ```
 
-### jdk logging
-
-笔者在实际项目开发中，并没有直接使用过jdk logging，其他三种都使用过。jdk logging是jdk自带的日志框架实现，位于java.util.logging包中。读者可以自行参照前面几种配置方式来配置jdk logging。
-
 ## 项目中存在多种日志框架的情况
 
 有的读者可能会发现，即使按照上面的配置无误了，依然无法打印出日志。这是可能是项目中存在多种日志框架的jar包依赖，导致冲突。
@@ -251,7 +247,7 @@ slf4j-->commons-logging-->log4j2-->log4j-->jdk logging(jul)-->no logging
 
 在3.4.0 mybatis的org.apache.ibatis.logging.LogFactory类的源码中体现了上面的描述：
 
-其中slf4j，commons-logging都是facade设计模式的实现，底层需要依赖具体的日志框架，如log4j、log4j2、logback等。并且还要引入相应的桥接jar包依赖。如果项目中有多种日志框架jar包依赖，可能会出现打印不了sql的情况，举例来说：
+其中slf4j，commons-logging都是facade设计模式(门面)的实现，底层需要依赖具体的日志框架，如log4j、log4j2、logback等。并且还要引入相应的桥接jar包依赖。如果项目中有多种日志框架jar包依赖，可能会出现打印不了sql的情况，举例来说：
 
 1. 项目中有了slf4j依赖，那么mybatis就使用slf4j来打印日志，但是slf4j需要依赖具体的日志框架实现和桥接jar包，如果缺少，则不能正常工作。如项目中有了slf4j依赖，有了log4j依赖，但是缺少slf4j-log4j12桥接jar包，即使log4.properties配置正确也是无法打印sql日志的，读者可以自行尝试。
 
