learn spring mvc

--- a/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.6-CountDownLatch.md
+++ b/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.6-CountDownLatch.md
@@ -1,6 +1,10 @@
-## CountDownLatch源码分析
+# CountDownLatch(倒计时锁)
 
 CountDownLatch类位于java.util.concurrent包下，利用它可以实现类似计数器的功能。比如有一个任务A，它要等待其他4个任务执行完毕之后才能执行，此时就可以利用CountDownLatch来实现这种功能了。
+
+>一个线程等待另外N个线程完成某个事情之后才能执行,这个线程等到CountDownLatch的值为0时才能继续往下执行.
+
+场景：一张数据表中存放大量的数据，现要读取表里的所有信息。为了提高读取效率便通过在主线程中开启多个子线程分工合作对数据表进行读取。接下来要等待全部子线程读取完毕之后，将读取到的内容进行汇总并在主线程中进行处理
 
 ```java
 // jdk1.5引入
