learn docker and docker-compose

--- a/Docker/01.0_Docker-quick-start.md
+++ b/Docker/01.0_Docker-quick-start.md
@@ -1,4 +1,4 @@
-## Docker 的安装
+# Docker 的安装
 
 [Docker CE 的安装请参考官方文档](https://docs.docker.com/install/linux/docker-ce/centos/)
 
@@ -13,11 +13,13 @@ sudo yum remove docker \
                   docker-logrotate \
                   docker-engine
 
-
 # 安装完成后，运行下面的命令，验证是否安装成功。
+# docker version会显示我们安装了2个东西,一个是Server,一个是Client
+# 所以docker是以c/s的架构方式运行的.
+# 我们后面用的命令,例如docker images就是从client端访问server的方式
+# 是通过一种叫docker rest api的 方式请求的.docker images显示的结果是
+# server端返回给我们的.
 $ docker version
-# 或者
-$ docker info
 
 # Docker 需要用户具有 sudo 权限，为了避免每次命令都输入sudo，可以把用户加入 Docker 用户组（官方文档）
 $ sudo usermod -aG docker $USER
@@ -32,15 +34,7 @@ systemctl start docker
 service docker status
 ```
 
-## Dockerfile 文件
-
-学会使用 image 文件以后，接下来的问题就是，如何可以生成 image 文件？如果你要推广自己的软件，势必要自己制作 image 文件。
-
-这就需要用到 Dockerfile 文件。它是一个文本文件Docker 根据 该文件生成二进制的 image 文件。
-
-下面通过一个实例，演示如何编写 Dockerfile 文件。
-
-## 实例：hello world
+# 实例：hello world
 
 下面，我们通过最简单的 image 文件"hello world"，感受一下 Docker。
 
@@ -54,34 +48,5 @@ $ docker image pull library/hello-world
 
 ```shell
 # 由于 Docker 官方提供的 image 文件，都放在library组里面，所以它的是默认组，可以省略。因此，上面的命令可以写成下面这样。
-
 $ docker image pull hello-world
-
-# 抓取成功以后，就可以在本机看到这个 image 文件了。
-$ docker image ls
-
-# 运行这个 hello-world image 文件。
-# docker container run命令会从 image 文件，生成一个正在运行的容器实例。
-# 注意，docker container run命令具有自动抓取 image 文件的功能。如果发现本地没有指定的 image 文件，就会从仓库自动抓取。因此，前面的docker image pull命令并不是必需的步骤。
-$ docker container run hello-world
-....
-
-
-# 有些容器不会自动终止，因为提供的是服务。比如，安装运行 Ubuntu 的 image，就可以在命令行体验 Ubuntu 系统:
-$ docker container run -it ubuntu bash
-
-
-# 对于那些不会自动终止的容器，必须使用docker container kill 命令手动终止。
-$ docker container kill [containID]
-
-# 可以通过以下命令来便捷的查看镜像、容器、数据卷所占用的空间
-docker system df
-
-# docker image ls 还支持强大的过滤器参数 --filter，或者简写 -f。
-# 比如，我们希望看到在 mongo:3.2 之后建立的镜像，可以用下面的命令：
-docker image ls -f since=mongo:3.2
-
-# 想查看某个位置之前的镜像也可以，只需要把 since 换成 before 即可。
-# 此外，如果镜像构建时，定义了 LABEL，还可以通过 LABEL 来过滤。
-$ docker image ls -f label=com.example.version=0.1
 ```
