--- a/Docker/01.0_Docker-quick-start.md
+++ b/Docker/01.0_Docker-quick-start.md
@@ -29,6 +29,9 @@ $ docker version
 ![](pics/Docker镜像加速器02.png)
 ![](pics/Docker镜像加速器03.png)
 ![](pics/Docker镜像加速器04.png)
+![](pics/Docker镜像加速器05.png)
+![](pics/Docker镜像加速器06.png)
+![](pics/Docker镜像加速器07.png)
 
 # Docker常用命令
 
