--- a/JAVA/EE/Distributed/docs/01_分布式锁.md
+++ b/JAVA/EE/Distributed/docs/01_分布式锁.md
@@ -1,6 +1,6 @@
-# 什么是分布式协调技术
+# 分布式协调技术
 
-分布式协调技术主要用来解决分布式环境当中多个进程之间的同步控制，让他们有序的去访问某种临界资源，防止造成"脏数据"的后果。
+分布式协调技术用来解决分布式环境中多个进程对临界资源的有序访问问题，防止造成数据不一致.(库存就剩一件商品,但是卖了2次.)
 
 ![](pics/分布式协调技术.png)
 
@@ -20,9 +20,9 @@
 
 # 分布式锁应该有的功能
 
-1. 安全:互斥,任何时候,只有一个客户端能持有同一个锁.
-2. 不会死锁:最终client一定会得到锁,就算一个持有锁的客户端宕掉或者发生网络分区异常.
-3. 分区容错性:当部分节点宕机时,客户端仍然能够获取锁和释放锁
+1. 互斥: 任何时候,只有一个客户端能持有同一个锁.
+2. 不会死锁: 最终client一定会得到锁,就算一个持有锁的客户端宕掉或者发生网络分区异常.
+3. 分区容错性: 当部分节点宕机时,客户端仍然能够获取锁和释放锁
 
 ![](pics/分布式锁应该具备哪些条件.png)
 
